--- a/src/components/hangman-figure/hangman-figure.module.css
+++ b/src/components/hangman-figure/hangman-figure.module.css
@@ -1,3 +1,13 @@
 .root{
-    background-color: tomato;
+}
+
+.figure{
+    fill: transparent;
+    stroke: white;
+    stroke-width: 0.25rem;
+    stroke-linecap: round;
+}
+
+.figurePart {
+    display: none;
 }
