--- a/src/components/dialog/dialog.module.css
+++ b/src/components/dialog/dialog.module.css
@@ -1,7 +1,16 @@
 .popupContainer{
-
+    background-color: rgba(255, 255, 255, 0.8);
+    color: black;
+    position: fixed;
+    border-radius: 5px;
+    width: 20%;
+    height: 150px;
 }
 
 .popup{
+    text-align: center
+}
 
+.popupBtn{
+    cursor: pointer;
 }
