--- a/src/components/letters/letters.module.css
+++ b/src/components/letters/letters.module.css
@@ -1,15 +1,7 @@
-.wrongLettersContainer{
-
+.uppercase{
+    text-transform: uppercase;
 }
-
-.wrongLetters{
-
-}
-
-.word{
-
-}
-
-#word{
-
+.uppercase + span{
+    padding-left: 1rem;
+    font-size: 1.5rem;
 }
