--- a/src/components/notification/notification.module.css
+++ b/src/components/notification/notification.module.css
@@ -1,5 +1,7 @@
 .notificationContainer{
-
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 10px 10px 0 0 ;
+    padding: 15px 20px;
 }
 
 .popup{
