--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 :root {
+
+  --main-color: 255, 255, 255;
+  --main-bg-color: 36, 36, 36;
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,24 +15,29 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@media (prefers-color-scheme: light) {
+  :root {
+    --main-color: 33, 53, 71;
+    --main-bg-color: 255, 255, 255;
+  }
+
+  button {
+    background-color: #f9f9f9;
+  }
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+#root {
+  max-width: 1280px;
+  padding: 2rem;
+  margin: 0 auto;
+  height: 80vh;
+  overflow: hidden;
 }
 
 body {
   margin: 0;
+  color: rgba(var(--main-color),0.87);
+  background-color: rgb(var(--main-bg-color));
 }
 
 h1 {
@@ -57,15 +64,4 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+
